compiler/testData/diagnostics/tests/valueClasses/sealedValueClass.kt
// FIR_IDENTICAL
// !SKIP_JAVAC
// !LANGUAGE: -SealedInlineClasses

<!VALUE_CLASS_NOT_FINAL!>sealed<!> <!VALUE_CLASS_WITHOUT_JVM_INLINE_ANNOTATION!>value<!> class SVC
